// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionsHistory component expects component to never be changed 1`] = `
<div
  className="transactions-history-container"
>
  <h2
    className="transactions-history-container-title"
  >
    Transaction History:
  </h2>
  Sum of transactions: 054,99 zł
  <Memo(Transaction)
    amount={13}
    convertedAmount="54,99 zł"
    deleteTransaction={[MockFunction]}
    id="2caf5711-2913-4e41-95db-088625acf1bf"
    key="2caf5711-2913-4e41-95db-088625acf1bf"
    title="Name"
  />
</div>
`;

exports[`TransactionsHistory component expects component to never be changed with no transactions 1`] = `
<div
  className="transactions-history-container"
>
  <h2
    className="transactions-history-container-title"
  >
    Transaction History:
  </h2>
  No transaction yet
</div>
`;
